oem-config (1.48) intrepid; urgency=low

  * Update oem-config-dm for KDE 4
  * Update kde_ui for intrepid wallpaper

 -- Jonathan Riddell <jriddell@ubuntu.com>  Fri, 05 Sep 2008 12:59:23 +0100

oem-config (1.47) intrepid; urgency=low

  * Add a vile hack to avoid clashing with kernel-helper over the debconf
    database lock. Filed LP #261543 to document that we need to do something
    better.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 26 Aug 2008 18:35:39 +0100

oem-config (1.46) intrepid; urgency=low

  * Suppress user-setup's encrypted private directory question in OEM mode.
  * Move oem-config init script link from 12 to 29 so that it starts after
    hal.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 26 Aug 2008 14:21:05 +0100

oem-config (1.45) intrepid; urgency=low

  [ Colin Watson ]
  * Restore lost change from 1.38:
    - Don't fail to set the locale if the mirror/country question doesn't
      exist.
  * Add oem to /usr/lib/oem-config/user/reserved-usernames (see LP #251056).
  * Add sensible --version output and output our version to oem-config.log.
  * Automatic update of included source packages: localechooser 2.03ubuntu2,
    user-setup 1.20ubuntu4.

  [ Michael Terry ]
  * Set LANG in /etc/default/locale even if it isn't there already
    (LP: #249550).
  * Ensure that some widget is focused after changing page (LP: #241367).
  * Add an auto-login option, currently GTK-only (LP: #241372).

  [ Evan Dandrea ]
  * Do not try to set localechooser/alreadyrun.  It is no longer used.
  * Also remove the langlevel file if it exists before we start
    localechooser.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 22 Aug 2008 13:00:18 +0100

oem-config (1.44) intrepid; urgency=low

  * Create /var/lib/localechooser directory, otherwise localechooser
    completely breaks.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 24 Jul 2008 20:11:02 +0100

oem-config (1.43) intrepid; urgency=low

  [ Colin Watson ]