@@ -40,7 +40,7 @@ Description: GTK+ frontend for end-user post-install configuration
 
 Package: oem-config-kde
 Architecture: all
-Depends: ${python:Depends}, oem-config, python-qt4, kde-window-manager, kdesudo | kdesudo-kde4
+Depends: ${python:Depends}, oem-config, python-kde4, kde-window-manager, kdesudo
 Replaces: oem-config (<< 1.0)
 Provides: oem-config-frontend-${mangled-version}
 XB-Python-Version: ${python:Versions}
