@@ -2,6 +2,7 @@ oem-config (1.48) intrepid; urgency=low
 
   * Update oem-config-dm for KDE 4
   * Update kde_ui for intrepid wallpaper
+  * Change kde_ui into a KApplication, so it picks up the KDE widget style
 
  -- Jonathan Riddell <jriddell@ubuntu.com>  Fri, 05 Sep 2008 12:59:23 +0100
 
